<resources>
    <string name="app_name">Whenit</string>
    <string name="app_name_dev">[DEV]Whenit</string>
    <string name="action_settings">Settings</string>
    <string name="action_licenses">Licenses</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_licenses">Licenses</string>

    <string name="label_title">title</string>
    <string name="label_date">date</string>
    <string name="close_button_content_description">close button</string>
    <string name="label_save_button">SAVE</string>
    <string name="input_helper_text_required">Required</string>
    <string name="years_postfix">years</string>
    <string name="days_postfix">days</string>
    <string name="title_prefix">from</string>
    <string name="text_more">more</string>
    <string name="get_started_header">イベントを登録しよう</string>
    <string name="get_started_description">忘れたくない、すぐに思い出したい大切なイベントを登録しましょう。登録すればいつでもすぐに確認することができます。</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>

    <string name="dialog_title_delete_confirm">Delete</string>
    <string name="dialog_text_text_delete_confirm_dialog">Do you want to delete this Event?</string>

    <string name="preference_header_notifications">Notifications</string>
    <string name="preferences_title_notifications">Show notifications</string>
    <string name="preferences_title_notifications_day">1 day before</string>
    <string name="preferences_title_notifications_week">1 week before</string>
    <string name="preferences_title_notifications_month">1 month before</string>
</resources>
